# poc_rag

./: Bank_Statement_Analyzer.py  Dockerfile_bank  README.md  poc_rag.py  pyproject.toml  requirements.txt  requirements_bank.txt  todo_financial_agent.py
pages/: 1_Document Classification.py  2_Draft Assistant.py  99_Bank Statement Analyzer.py  9_Credentials.py
source/: app.py  doc_classification.py  model.py  rag.py  text.py  tmp.ipynb  vector_store.py
